# mem8-lite

./: CLAUDE.md  Cargo.toml  MEM8_UNIFIED_ARCHITECTURE.md  README.md
examples/: audio_marine.rs  basic.rs  process_flac.rs
frontal_lobe/x86_64/: secure_boot.S  wave_ops.S
src/: audio.rs  audio_loader.rs  fs.rs  lib.rs  lite.rs  marine.rs  mcp_server.rs  mood_engine.rs  mount.rs  nexus_sovereignty.rs  personality_multisig.rs  sensor_ingress.rs  tidal_dj.rs
