[package]
name = "mem8-fs-lite"
version = "0.1.0"
edition = "2021"
authors = ["8b-is <dev@8b.is>"]
description = "Lightning-fast wave-based filesystem - 973× faster storage without the consciousness"
license = "MIT"
repository = "https://github.com/8b-is/mem8-fs-lite"
keywords = ["filesystem", "wave", "storage", "fast", "mem8"]
categories = ["filesystem", "data-structures", "caching"]

[dependencies]
# Core wave processing (the secret sauce!)
num-complex = "0.4"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For Marine metadata
bincode = "1.3"
byteorder = "1.5"

# Filesystem operations  
memmap2 = "0.9"
fs4 = "0.11"  # Cross-platform file locking

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Audio format support
claxon = "0.4"  # FLAC decoder - pure Rust!
hound = "3.5"   # WAV file support

# Optional async support
tokio = { version = "1.42", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# Optional FUSE support for mounting as actual filesystem!
fuser = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
rand = "0.8"
proptest = "1.6"
hex = "0.4"

[features]
default = []
async = ["tokio", "async-trait"]
fuse-mount = ["fuser"]  # Mount as actual filesystem!
simd = []  # SIMD optimizations

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "filesystem"
path = "examples/filesystem.rs"
required-features = ["fuse-mount"]

[[example]]
name = "audio_marine"
path = "examples/audio_marine.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3